Fill in site with conntent

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "paths": {
       "@layout": ["src/layout"],
       "@views": ["src/views"]
-    }
+    },
+    "typeRoots": ["./src/types", "node_modules/@types"]
   },
   "include": ["src"]
 }
